--- a/bookbyshow.css
+++ b/bookbyshow.css
@@ -34,8 +34,9 @@
     width: 100%;
 }
 .search input{ 
-    border: 1px solid black;
-    height: 1.8rem;
+    border: 1px solid rgba(0, 0, 0, 0.041);
+    border-radius: 0.2rem;
+    height: 2.1rem;
     width: 70%;
     margin-left:1rem;
 }
@@ -67,13 +68,14 @@
 .nav{
     display: flex;
     justify-content: space-between;
-    height: 3rem;
+    height: 2.5rem;
     padding: 0 70px;
     background-color: #F5F5F5;
 }
 
 .nav a{
     text-decoration: none;
+    color: black;
 }
 
 .nav-option{
