--- a/bookbyshow.css
+++ b/bookbyshow.css
@@ -10,14 +10,17 @@
  /*-------------- HEADER SECTION -------------------- */
 
 .header{
-    display: flex;
-    padding: 0 70px ;
-    /* padding-left: 60px;
-    padding-right: 60px; */
-    justify-content: center;
     height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+.header-body{
+    display: flex; 
+    width: 100%;
+    padding: 0 20rem ;
+    justify-content: center;
+}
 /* HEADER>logo-search */
 .logo-search{
     width: 100%;
@@ -91,16 +94,14 @@
     align-items: center;
 }
 
-hr{
-    
-}
+
 
 /* ----------------- END OF NAV --------------------- */
 
 /* ----------------- START OF RECOMMENDED MOVIES --------------------- */
 
 .recommended-movies{
-    height: 450px;
+    height: 500px;
     background-color: black;
 }
 
@@ -111,7 +112,7 @@ hr{
     padding: 0rem 4rem;
     display: flex;
     flex-direction: column;
-    
+
 }
 
 .recommended-movies-header{
