--- a/bookbyshow.css
+++ b/bookbyshow.css
@@ -69,11 +69,19 @@
 
 /* ----------------- START OF NAV --------------------- */
 .nav{
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F5F5F5;
+}
+
+.nav-body{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     height: 2.5rem;
-    padding: 0 70px;
-    background-color: #F5F5F5;
+    padding: 0 20rem;
 }
 
 .nav a{
@@ -83,7 +91,6 @@
 
 .nav-option{
     display: flex;
-    
     align-items: center;
     gap: 0.7rem;
 }
@@ -106,7 +113,7 @@
 }
 
 
-.recommended-movies-main{
+.recommended-movies-body{
     background-color: #F5F5F5;
     height: 100%;
     padding: 0rem 4rem;
