create div for stream banner

--- a/bookbyshow.css
+++ b/bookbyshow.css
@@ -199,3 +199,5 @@ a{
 /* -----------  END OF CARDS  ----------------*/
 
             /* ----------------- END OF RECOMMENDED MOVIES --------------------- */
+
+            /*-----------------------  START OF STREAM ------------------------- */
